<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="300.0dip"
    app:cardBackgroundColor="@color/mainactivity2"
    app:cardCornerRadius="2.0dip">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:clickable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@id/toolbar1"
            android:layout_width="fill_parent"
            android:layout_height="56.0dip"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:fontFamily="@font/san_regular"
                android:gravity="center"
                android:paddingLeft="8.0dip"
                android:paddingRight="8.0dip"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="14.0sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toLeftOf="@id/btnDone"
                android:layout_toRightOf="@id/btnCancel"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@id/btnMoreQuotes"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:fontFamily="@font/san_regular"
                    android:gravity="center"
                    android:visibility="gone"
                    android:paddingLeft="8.0dip"
                    android:paddingRight="8.0dip"
                    android:text="@string/more_quotes"
                    android:textColor="@color/white"
                    android:textSize="14.0sp" />

                <TextView
                    android:id="@id/btnRandom"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:visibility="gone"
                    android:fontFamily="@font/san_regular"
                    android:gravity="center"
                    android:paddingLeft="8.0dip"
                    android:paddingRight="8.0dip"
                    android:text="@string/random"
                    android:textColor="@color/white"
                    android:textSize="14.0sp" />
            </LinearLayout>

            <TextView
                android:id="@id/btnDone"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:fontFamily="@font/san_regular"
                android:gravity="center"
                android:paddingLeft="8.0dip"
                android:paddingRight="8.0dip"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="14.0sp" />
        </RelativeLayout>

        <FrameLayout
            android:id="@id/roubdRect1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/toolbar1"
            android:layout_margin="24.0dip"
            android:background="?selectableItemBackground">

            <EditText
                android:id="@id/edtQuotes"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/mainactivity2"
                android:gravity="center"
                android:hint="Your text"
                android:inputType="textMultiLine"
                android:padding="8.0dip"
                android:selectAllOnFocus="true"
                android:textColor="@color/white"
                android:textColorHint="#ff555555" />
        </FrameLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>